# libjh

./: .gitignore  CMakeLists.txt  base.hpp  configuration.hpp  debug.cpp  debug.hpp  enum_flag.hpp  environment.hpp  file_operations.hpp  filesystem_macro.hpp  getoptpp.hpp  phy.hpp
tests/: getopt.cpp
